...
        .init(name: "Credit card", target: 1_500),
    ]

    static let defaultRouting: [RoutingCategoryTemplate] = [
        .init(name: "Investments", target: 1_000, annualRate: 0.08),
        .init(name: "Emergency fund", target: 1_000, annualRate: 0.0375),
        .init(name: "Car fund", target: 400, annualRate: 0.0375),
        .init(name: "Hobby fund", target: 300, annualRate: 0.0375),
    ]
}

